# AdvancedProgrammingConcepts

AdvProgConcepts/Week1/assignment/: CMakeLists.txt
AdvProgConcepts/Week1/assignment/assignment/: CMakeLists.txt  ilogger.h  itime_source.h  logger.h  program.cpp  system_time_source.cpp  system_time_source.h
Week1/assignment/assignment/: CMakeLists.txt  console_writer.cpp  console_writer.h  ilogger.h  itext_writer.h  itime_source.h  logger.cpp  logger.h  main.cpp  program.cpp  program.h  stream_writer.cpp  stream_writer.h  system_time_source.cpp  system_time_source.h
Week2/assignment/assignment/: main.cpp
Week2/assignment/assignment/clib/: CMakeLists.txt  clogger_adapter.cpp  clogger_adapter.h
Week2/assignment/assignment/include/: clogger_adapter.h  decorator.h
Week2/assignment/assignment/include/decorators/: runningtime_decorator.h  timestamp_decorator.h
Week2/assignment/assignment/src/: CMakeLists.txt  clogger_adapter.cpp  decorator.cpp
Week2/assignment/assignment/src/decorators/: runningtime_decorator.cpp  timestamp_decorator.cpp
Week3/assignment/assignment/: main.cpp
Week3/assignment/assignment/include/: clogger_as_writer.h
Week3/assignment/assignment/include/builders/: ilogger_builder.h  logger_builder.h
Week3/assignment/assignment/include/global/: runningtime_provider.h
Week3/assignment/assignment/source/: CMakeLists.txt  clogger_as_writer.cpp
Week3/assignment/assignment/source/builder/: logger_builder.cpp
Week3/assignment/assignment/source/global/: runningtime_provider.cpp
Week5/assignment_04/lib_ds/include/: list.h
Week5/assignment_04/tests/list/: list_tests.cpp
Week6/assignment_05/: CMakeLists.txt  README.md  main.cpp
Week6/assignment_05/lib_algos/: CMakeLists.txt
Week6/assignment_05/lib_algos/include/: algos.h
Week6/assignment_05/tests/: CMakeLists.txt  algo_tests.cpp  test_runner.cpp
Week7/assignment_06/: ASSIGNMENT.md  CMakeLists.txt  README.md  main.cpp  vector.h
Week8/: BelbinTest.xlsm
